<resources>
    <string name="app_name"></string>
    <string name="MensagemInicial">Faça seu Login</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="botaoInicial">Entrar</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_config">Config</string>
    <string name="action_sair">Sair</string>
    <string name="config">Configuração</string>
    <string name="Pneu">Pneus</string>
    <string name="eletrica">Elétrica</string>
    <string name="oleo">Óleos</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="excluir">Remover Elétrica</string>
    <string name="excluir_pneu">Remover Pneu</string>
    <string name="excluir_oleo">Remover Óleo</string>
</resources>