<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/MensagemInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MensagemInicial"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10pt"/>

    <EditText
        android:id="@+id/campoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/usuario"/>

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/senha"/>

    <Button
        android:id="@+id/botaoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botaoInicial" />

    <ImageView
        android:id="@+id/imagem_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>