<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/eletrica_botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eletrica" />

    <Button
        android:id="@+id/oleo_botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oleo" />

    <Button
        android:id="@+id/pneu_botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pneu" />
</LinearLayout>